--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "live-server": "^1.2.2",
